// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Crosshair should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-crosshair"
    >
      <line
        stroke="#000000"
        stroke-opacity="0.5"
        stroke-width="1"
        x1="0"
        x2="800"
        y1="200"
        y2="200"
      />
      <line
        stroke="#000000"
        stroke-opacity="0.5"
        stroke-width="1"
        x1="150"
        x2="150"
        y1="0"
        y2="400"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Crosshair should render just horizontal lines correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-crosshair"
    >
      <line
        stroke="#000000"
        stroke-opacity="0.5"
        stroke-width="1"
        x1="0"
        x2="800"
        y1="200"
        y2="200"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Crosshair should render just vertical lines correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-crosshair"
    >
      <line
        stroke="#000000"
        stroke-opacity="0.5"
        stroke-width="1"
        x1="150"
        x2="150"
        y1="0"
        y2="400"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Crosshair should render nothing if there is no mouse coordinate 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-crosshair"
    />
  </svg>
</DocumentFragment>
`;

exports[`Crosshair should skip if there is no layer avaliable 1`] = `
Object {
  "current": null,
}
`;
